tests/integration/lsp/text_document/snapshots/integration__lsp__text_document__completion__citation_open_brace_multiple.snap
---
source: tests/integration/lsp/text_document/completion.rs
assertion_line: 269
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\addbibresource{main.bib}\n%SRC \\cite{foo,a\n%CUR           ^\n%1.1           ^\n\n%BIB main.bib\n%SRC @article{foo,}\"#)?"
---
[
  {
    "data": "[data]",
    "filterText": "foo @article foo",
    "kind": 1,
    "label": "foo",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "foo"
    }
  }
]
